[tool.poetry]
name = "nasdaq-100-ticker-history"
version = "2025.3.1"
description = "Return NASDAQ 100 ticker symbols by date."
authors = ["Jeff McCarrell <jeff@mccarrell.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
strictyaml = "^1.7.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^3.2.1"
doc2dash = "^2.3.0"
towncrier = "^19.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"

[tool.towncrier]
package = "nasdaq_100_ticker_history"
filename = "docs/changelog.rst"

[tool.ruff]
line-length = 108

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
