[project]
name = "nasdaq-100-ticker-history"
version = "2025.8.0"
description = "Sets of NASDAQ 100 ticker symbols by date."
authors = [{ name = "Jeff McCarrell", email = "jeff@mccarrell.org" }]
requires-python = ">=3.11, <4"
license = "MIT"
dependencies = ["strictyaml>=1.7.3,<2"]

[dependency-groups]
docs = [
    "sphinx>=3.2.1,<4",
    "doc2dash>=2.3.0,<3",
    "towncrier>=19.2.0,<20",
]
dev = [
    "coverage",
    "mypy>=1.9.0,<2",
    "pytest",
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = [
    "docs",
    "dev",
]

[tool.towncrier]
package = "nasdaq_100_ticker_history"
filename = "docs/changelog.rst"

[tool.ruff]
line-length = 108

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"


[tool.coverage.run]
branch = true
parallel = true
source = ["nasdaq_100_ticker_history", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
